@@ -15,6 +15,8 @@ BUG FIXES
 
     o scanBamFlag isValidVendorRead had reversed TRUE/FALSE logic
 
+    o Attempts to read too many records caught more gracefully.
+
 CHANGES IN VERSION 1.2.0
 ------------------------
 
